--- a/index.html
+++ b/index.html
@@ -134,9 +134,17 @@
         <div class="col-md-12 about-intro">
           <h3 class="section-title">Happy Grow World</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">Our aim is to create a sustainable future for organically conscious individuals. By supporting organic only organizations,
-            we not only provide a sustainable future for Planet Earth, but sustainable growth for these organziations and
-            our supporters with a 200% Yearly RoI.
+          <p class="section-description"> :tada: Welcome to the GROW project :tada:
+<br>
+The projects idea is to grow other communities with activity. We have real people (not bots which is a common problem) that will join another projects community, learn about the project, and be active in their social media accounts (discord /telegram/Facebook/Twitter)and participate and talk positively about the project.
+Any project doing marketing to grow needs quality activity and it will be our Job to provide that. We have contests to incentivize activity. We assign trusted team members to each client to ensure requirements of clients are met.
+<br>
+We will look at your proposition/requirements, identify your needs and formulate an action plan step by step and fully transparent.
+We will then present this to you as a contract for your approval.
+<br>
+We will set about achieving successful implementation in a time frame that is mutually acceptable.
+<br>
+"Together we will GROW!".
           </p>
         </div>
       </div>
