--- a/index.html
+++ b/index.html
@@ -132,10 +132,9 @@
     <div class="container wow fadeInUp">
       <div class="row">
         <div class="col-md-12 about-intro">
-          <h3 class="section-title">Happy Grow World</h3>
+          <h3 class="section-title"> Welcome to the GROW project </h3>
           <div class="section-title-divider"></div>
-          <p class="section-description"> :tada: Welcome to the GROW project :tada:
-<br>
+          <p class="section-description">
 The projects idea is to grow other communities with activity. We have real people (not bots which is a common problem) that will join another projects community, learn about the project, and be active in their social media accounts (discord /telegram/Facebook/Twitter)and participate and talk positively about the project.
 Any project doing marketing to grow needs quality activity and it will be our Job to provide that. We have contests to incentivize activity. We assign trusted team members to each client to ensure requirements of clients are met.
 <br>
