--- a/index.html
+++ b/index.html
@@ -135,15 +135,11 @@
           <h3 class="section-title"> Welcome to the GROW project </h3>
           <div class="section-title-divider"></div>
           <p class="section-description">
-The projects idea is to grow other communities with activity. We have real people (not bots which is a common problem) that will join another projects community, learn about the project, and be active in their social media accounts (discord /telegram/Facebook/Twitter)and participate and talk positively about the project.
-Any project doing marketing to grow needs quality activity and it will be our Job to provide that. We have contests to incentivize activity. We assign trusted team members to each client to ensure requirements of clients are met.
+The projects idea is to grow other communities with activity. We have real people (not bots which is a common problem) that will join another projects community, learn about the project, be active in their social media accounts (discord /telegram/Facebook/Twitter) and participate and talk positively about the project. Any project doing marketing to grow needs quality activity and it will be our job to provide that. We have contests to incentivize activity. We assign trusted team members to each client to ensure requirements of clients are met.
 <br>
-We will look at your proposition/requirements, identify your needs and formulate an action plan step by step and fully transparent.
-We will then present this to you as a contract for your approval.
+We will look at your proposition/requirements, identify your needs and formulate a fully transparent step-by-step plan we feel will not only meet but exceed your expectations. We will then present this to you, as a contract, for your approval. Upon your agreement, we will set about achieving successful implementation in a time frame that is mutually acceptable.
 <br>
-We will set about achieving successful implementation in a time frame that is mutually acceptable.
-<br>
-"Together we will GROW!".
+Together we will GROW!
           </p>
         </div>
       </div>
