--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GROW - Harvest Sustainable Blockchain Rewards</title>
+  <title>PROJECT - together we will GROW</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
-  <meta property="og:title" content="GROW - Harvest Sustainable Blockchain Rewards">
+  <meta property="og:title" content="GROW PROJECT - together we will GROW">
   <meta property="og:image" content="./img/logo.png">
   <meta property="og:url" content="http://Growcoin.info">
-  <meta property="og:site_name" content="GROW - Harvest Sustainable Blockchain Rewards">
+  <meta property="og:site_name" content="GROW PROJECT - together we will GROW">
   <meta property="og:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthsiasts.">
 
   <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="http://happygrow.world">
-  <meta name="twitter:title" content="GROW - Harvest Sustainable Blockchain Rewards">
+  <meta name="twitter:title" content="PROJECT - togetehr we will GROW">
   <meta name="twitter:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthsiasts.">
   <meta name="twitter:image" content="./img/logo.png">
 
@@ -72,15 +72,15 @@
     <div class="hero-container">
       <div class="wow fadeIn">
         <div class="hero-logo">
-          <img class="" src="img/logo.png" alt="Growcoin">
+          <img class="" src="img/logo.png" alt="GROW">
         </div>
 
-        <h1>Welcome to GROW</h1>
+        <h1>Welcome to the GROW project</h1>
         <h2>
-          <span class="rotating">Reap GROW Coin with Organic RoI*, Support a Sustainable Organic Future, Invest in your Future.</span>
+          <span class="rotating">GROW your project with social media and marketing influence, let us help you GROW that future.</span>
         </h2>
         <div class="actions">
-          <a href="#about" class="btn">Grow With Us</a>
+          <a href="#about" class="btn">Let us help you GROW</a>
         </div>
       </div>
     </div>
@@ -135,9 +135,13 @@
           <h3 class="section-title"> Welcome to the GROW project </h3>
           <div class="section-title-divider"></div>
           <p class="section-description">
-The projects idea is to grow other communities with activity. We have real people (not bots which is a common problem) that will join another projects community, learn about the project, be active in their social media accounts (discord /telegram/Facebook/Twitter) and participate and talk positively about the project. Any project doing marketing to grow needs quality activity and it will be our job to provide that. We have contests to incentivize activity. We assign trusted team members to each client to ensure requirements of clients are met.
+The projects idea is to grow other communities with activity. We have real people (not bots which is a common problem) that will join another projects community, learn about the project, be active in their social media accounts (discord /telegram/Facebook/Twitter) and participate and talk positively about the project.
+            <br>
+            Any project doing marketing to grow needs quality activity and it will be our job to provide that. We have contests to incentivize activity. We assign trusted team members to each client to ensure requirements of clients are met.
 <br>
-We will look at your proposition/requirements, identify your needs and formulate a fully transparent step-by-step plan we feel will not only meet but exceed your expectations. We will then present this to you, as a contract, for your approval. Upon your agreement, we will set about achieving successful implementation in a time frame that is mutually acceptable.
+We will look at your proposition/requirements, identify your needs and formulate a fully transparent step-by-step plan we feel will not only meet but exceed your expectations. We will then present this to you, as a contract, for your approval.
+            <br>
+            Upon your agreement, we will set about achieving successful implementation in a time frame that is mutually acceptable.
 <br>
 Together we will GROW!
           </p>
