--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <img class="" src="img/logo.png" alt="GROW">
         </div>
 
-        <h1>Welcome to the GROW project</h1>
+        <h1>Welcome to GROW project</h1>
         <h2>
-          <span class="rotating">GROW your project with social media and marketing influence, let us help you GROW that future.</span>
+          <span class="rotating">GROW your project with social media and marketing influence. Let us help you GROW that future.</span>
         </h2>
         <div class="actions">
           <a href="#about" class="btn">Let us help you GROW</a>
