--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PROJECT - together we will GROW</title>
+  <title>GROW PROJECT - together we will GROW</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -96,7 +96,7 @@
         <a href="#hero">
           <img src="img/logo.png" alt="" title="" /></img>
         </a>
-        <h1>GROW</h1>
+        <h1>PROJECT</h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -132,7 +132,7 @@
     <div class="container wow fadeInUp">
       <div class="row">
         <div class="col-md-12 about-intro">
-          <h3 class="section-title"> Welcome to the GROW project </h3>
+          <h3 class="section-title"> Welcome to GROW project </h3>
           <div class="section-title-divider"></div>
           <p class="section-description">
 The projects idea is to grow other communities with activity. We have real people (not bots which is a common problem) that will join another projects community, learn about the project, be active in their social media accounts (discord /telegram/Facebook/Twitter) and participate and talk positively about the project.
