--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Together we will GROW!
         <div class="col-md-12">
           <div id="rssFeed"></div>
           <div class="actions">
-            <a href="https://medium.com/growcoin" class="btn lite">Read More on Medium</a>
+            <a href="" class="btn lite">Coming Soon!</a>
           </div>
         </div>
       </div>
