--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <meta property="og:image" content="./img/logo.png">
   <meta property="og:url" content="http://Growcoin.info">
   <meta property="og:site_name" content="GROW PROJECT - together we will GROW">
-  <meta property="og:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthsiasts.">
+  <meta property="og:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthusiasts.">
 
   <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="http://happygrow.world">
   <meta name="twitter:title" content="PROJECT - togetehr we will GROW">
-  <meta name="twitter:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthsiasts.">
+  <meta name="twitter:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthusiasts.">
   <meta name="twitter:image" content="./img/logo.png">
 
   <!-- icons for mobile devices -->
