--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta charset="utf-8">
   <title>GROW PROJECT - together we will GROW</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="" name="Social Media, Marketing, Discord, Telegram, Twitter">
+  <meta content="" name="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering organizations and enthusiasts.">
 
   <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
   <meta property="og:title" content="GROW PROJECT - together we will GROW">
   <meta property="og:image" content="./img/logo.png">
   <meta property="og:url" content="https://kaneida.github.io/Grow-ProjectSite">
   <meta property="og:site_name" content="GROW PROJECT - together we will GROW">
-  <meta property="og:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthusiasts.">
+  <meta property="og:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering organizations and enthusiasts.">
 
   <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="https://kaneida.github.io/Grow-ProjectSite">
   <meta name="twitter:title" content="GROW PROJECT - together we will GROW">
-  <meta name="twitter:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering sustainable organic certified organizations and enthusiasts.">
+  <meta name="twitter:description" content="Invest in GROW, invest in your future. Sustainable Blockchain Technology empowering organizations and enthusiasts.">
   <meta name="twitter:image" content="./img/logo.png">
 
   <!-- icons for mobile devices -->
